--- a/php.ini
+++ b/php.ini
@@ -135,7 +135,7 @@
 ;   Production Value: 60 (60 seconds)
 
 ; output_buffering
-;   Default Value: Off
+;   Default Value: On
 ;   Development Value: 4096
 ;   Production Value: 4096
 
