--- a/application/.htaccess
+++ b/application/.htaccess
@@ -1,6 +1,28 @@
-<IfModule authz_core_module>
-    Require all denied
-</IfModule>
-<IfModule !authz_core_module>
-    Deny from all
-</IfModule>
+# <IfModule authz_core_module>
+#     Require all denied
+# </IfModule>
+# <IfModule !authz_core_module>
+#     Deny from all
+# </IfModule>
+
+RewriteEngine On
+RewriteBase /library-kit/
+
+#Removes access to the system folder by users.
+#Additionally this will allow you to create a System.php controller,
+
+RewriteCond %{REQUEST_URI} ^system.*
+RewriteRule ^(.*)$ index.php?/$1 [L]
+
+#When your application folder isn't in the system folder
+
+RewriteCond %{REQUEST_URI} ^application.*
+RewriteRule ^(.*)$ /index.php?/$1 [L]
+
+#Checks to see if the user is attempting to access a valid file,
+#such as an image or css document, if this isn't true it sends the
+#request to index.php
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ index.php?/$1 [L]
